# arxiv-reader

./: Cargo.toml  LICENSE  README.md  TODO
src/: article.rs  bibtex.rs  config.rs  db.rs  filter.rs  interact.rs  main.rs  oai.rs  rate_limited_client.rs  util.rs
src/sample/: .gitignore  config.toml
