[package]
name = "arxiv-reader"
version = "0.1.0"
edition = "2024"
description = "Command-line program to find and read articles on arXiv"
license = "MIT"

[dependencies]
quick-xml = {version = "0.38", features = ["serialize"]}
serde = {version = "1.0", features = ["derive"]}
anyhow = {version = "1.0"}
reqwest = {version = "0.12", features = ["blocking"]}
serde_json = {version = "1.0"}
clap = {version = "4.5", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"]}
termion = {version = "4.0"}
toml = {version = "0.9"}
biblatex = {version = "0.11"}
clap_complete = {version = "4.5"}
rusqlite = {version = "0.37"}
aho-corasick = {version = "1.1"}
